crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__missing_unicode_lbrace_error.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: error
snapshot_kind: text
---
ParseError {
    error: Lexical(
        MissingUnicodeLbrace,
    ),
    location: 3..3,
}
